Agrego funcionalidades, agregar productos y reseñas
Uso de arrays, funciones, funciones de orden superior, localstorage, acceso al DOM desde el js, eventos

--- a/TP coderhouse/carrito.html
+++ b/TP coderhouse/carrito.html
@@ -17,6 +17,7 @@
     <a href="yerba.html">Yerbas</a>
     <a href="bombillas.html">Bombillas</a>
     <a href="carrito.html">Carrito</a>
+    <a href="agregar.html">Agregar Producto</a>
   </nav>
 
 <div id="carritoContainer" style="display:none;">
@@ -26,5 +27,6 @@
 </div>
 <script src="js/productos.js"></script>
 <script src="js/carrito.js"></script>
+<script>inicializarCarrito();</script>
 </body>
 </html>
