--- a/TP coderhouse/mates.html
+++ b/TP coderhouse/mates.html
@@ -17,6 +17,7 @@
     <a href="yerba.html">Yerbas</a>
     <a href="bombillas.html">Bombillas</a>
     <a href="carrito.html">Carrito</a>
+    <a href="agregar.html">Agregar Producto</a>
   </nav>
 
   <div class="container"></div>
