--- a/TP coderhouse/bombillas.html
+++ b/TP coderhouse/bombillas.html
@@ -17,10 +17,10 @@
     <a href="yerba.html">Yerbas</a>
     <a href="bombillas.html">Bombillas</a>
     <a href="carrito.html">Carrito</a>
+    <a href="agregar.html">Agregar Producto</a>
   </nav>
 
   <div class="container">
-<div class="container"></div>
   
   <script src="js/productos.js"></script>
   <script>
