--- a/TP coderhouse/agregar.html
+++ b/TP coderhouse/agregar.html
@@ -25,11 +25,11 @@
   <form id="formAgregarProducto">
     <div>
       <label>Nombre:</label>
-      <input type="text" id="nombre" required />
+      <input type="text" id="nombre" name="nombre" placeholder="Ej: Mate Imperial" required>
     </div>
     <div>
       <label>Precio:</label>
-      <input type="number" id="precio" required />
+      <input type="number" id="precio" name="precio" placeholder="Ej: 1500" required>
     </div>
     <div>
       <label>Categoría:</label>
@@ -43,7 +43,7 @@
   </form>
 </div>
 
-
   <script src="js/agregar.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
