--- a/TP coderhouse/carrito.html
+++ b/TP coderhouse/carrito.html
@@ -28,5 +28,6 @@
 <script src="js/productos.js"></script>
 <script src="js/carrito.js"></script>
 <script>inicializarCarrito();</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
