--- a/TP coderhouse/index.html
+++ b/TP coderhouse/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Materos</title>
   <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
   <header>
@@ -32,5 +33,6 @@
   </div>
   <script src="js/productos.js"></script>
   <script src="js/reseñas.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
