--- a/TP coderhouse/mates.html
+++ b/TP coderhouse/mates.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mates - Materos</title>
   <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
 </head>
 <body>
   <header>
@@ -27,5 +28,6 @@
     // Mostrar solo los productos de la categoría "Mate"
     mostrarProductos("Mate");
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
