--- a/TP coderhouse/yerba.html
+++ b/TP coderhouse/yerba.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yerbas - Materos</title>
   <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
 </head>
 <body>
   <header>
@@ -27,6 +28,7 @@
     // Mostrar solo los productos de la categoría "Yerba"
     mostrarProductos("Yerba");
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </div>
 </body>
 </html>
